--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@ button{
     border-radius: 10px;
     display: grid;
     margin: 10px 0 20px;
+    max-height: 250px;
+    overflow-y: auto;
 }
 
 .task{
